# FlauschArchivar

./: CMakeLists.txt  README.md  data.sql  databaseaccess.cpp  databaseaccess.h  dbStructure.sql  flauscharchivar_global.h  main.cpp  resource_file.qrc
